# karabiner-multiplatform

./: CMakeLists.txt  README.md  main.cpp
include/: keyCodes.h
include/hotKeyManager/: hotKeyManager.h
include/keyBoardManager/: keyEvent.h  keySender.h
src/: main.cpp
src/hotKeyManager/: hotKeyManager.cpp  hotKeyManager.h
src/keyBoardManager/: keyEvent_linux.cpp  keyEvent_macos.cpp  keyEvent_windows.cpp  keySender_windows.cpp
src/keyEventManager/: getKeyEvent.h  getKeyEvent_linux.cpp  getKeyEvent_macos.cpp  getKeyEvent_windows.cpp
